// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IntegrationDetail /> email should render the forwarding page for a specific integration 1`] = `
<div>
  EmailIntegrationCreateForwarding
</div>
`;

exports[`<IntegrationDetail /> email should render the onboarding page 1`] = `
<div>
  EmailIntegrationOnboarding
</div>
`;

exports[`<IntegrationDetail /> email should render the verification page for a specific integration 1`] = `
<div>
  EmailIntegrationCreateVerification
</div>
`;

exports[`<IntegrationDetail /> facebook should render the customer chat tab for a specific integration 1`] = `
<div>
  FacebookIntegrationCustomerChat
</div>
`;

exports[`<IntegrationDetail /> phone should render the voicemail tab of a specific integration 1`] = `
<div>
  VoiceIntegration
</div>
`;

exports[`<IntegrationDetail /> should display not available message if twitter integration not included in price 1`] = `
<div
  class="container-fluid"
>
  <h3
    class="text-center mt-5"
  >
    Feature not available on your current plan.
  </h3>
</div>
`;

exports[`<IntegrationDetail /> should render the creation page for aircall 1`] = `
<div>
  AircallIntegrationCreate
</div>
`;

exports[`<IntegrationDetail /> should render the creation page for email 1`] = `
<div>
  EmailIntegrationCreate
</div>
`;

exports[`<IntegrationDetail /> should render the creation page for facebook 1`] = `
<div>
  FacebookIntegrationDetail
</div>
`;

exports[`<IntegrationDetail /> should render the creation page for phone 1`] = `
<div>
  VoiceIntegration
</div>
`;

exports[`<IntegrationDetail /> should render the creation page for sms 1`] = `
<div>
  SmsIntegration
</div>
`;

exports[`<IntegrationDetail /> should render the list or detail page of integrations for aircall 1`] = `
<div>
  AircallIntegrationList
</div>
`;

exports[`<IntegrationDetail /> should render the list or detail page of integrations for bigcommerce 1`] = `
<div>
  BigCommerceIntegration
</div>
`;

exports[`<IntegrationDetail /> should render the list or detail page of integrations for email 1`] = `
<div>
  EmailIntegrationList
</div>
`;

exports[`<IntegrationDetail /> should render the list or detail page of integrations for facebook 1`] = `
<div>
  FacebookIntegrationList
</div>
`;

exports[`<IntegrationDetail /> should render the list or detail page of integrations for http 1`] = `
<div>
  HTTPIntegration
</div>
`;

exports[`<IntegrationDetail /> should render the list or detail page of integrations for klaviyo 1`] = `
<div>
  KlaviyoIntegrationList
</div>
`;

exports[`<IntegrationDetail /> should render the list or detail page of integrations for magento2 1`] = `
<div>
  Magento2Integration
</div>
`;

exports[`<IntegrationDetail /> should render the list or detail page of integrations for phone 1`] = `
<div>
  VoiceIntegration
</div>
`;

exports[`<IntegrationDetail /> should render the list or detail page of integrations for recharge 1`] = `
<div>
  RechargeIntegration
</div>
`;

exports[`<IntegrationDetail /> should render the list or detail page of integrations for shopify 1`] = `
<div>
  ShopifyIntegration
</div>
`;

exports[`<IntegrationDetail /> should render the list or detail page of integrations for smile 1`] = `
<div>
  SmileIntegrationList
</div>
`;

exports[`<IntegrationDetail /> should render the list or detail page of integrations for sms 1`] = `
<div>
  SmsIntegration
</div>
`;

exports[`<IntegrationDetail /> should render the list or detail page of integrations for yotpo 1`] = `
<div>
  YotpoIntegrationList
</div>
`;

exports[`<IntegrationDetail /> should render the page of a specific integration for email 1`] = `
<div>
  EmailIntegrationUpdateLayout
  <div>
    <div>
      EmailIntegrationUpdate
    </div>
  </div>
</div>
`;

exports[`<IntegrationDetail /> should render the page of a specific integration for facebook 1`] = `
<div>
  FacebookIntegrationDetail
</div>
`;

exports[`<IntegrationDetail /> should render the page of a specific integration for klaviyo 1`] = `
<div>
  KlaviyoIntegrationDetail
</div>
`;

exports[`<IntegrationDetail /> should render the page of a specific integration for magento2 1`] = `
<div>
  Magento2Integration
</div>
`;

exports[`<IntegrationDetail /> should render the page of a specific integration for recharge 1`] = `
<div>
  RechargeIntegration
</div>
`;

exports[`<IntegrationDetail /> should render the page of a specific integration for shopify 1`] = `
<div>
  ShopifyIntegration
</div>
`;

exports[`<IntegrationDetail /> should render the page of a specific integration for smile 1`] = `
<div>
  SmileIntegrationDetail
</div>
`;

exports[`<IntegrationDetail /> should render the page of a specific integration for yotpo 1`] = `
<div>
  YotpoIntegrationDetail
</div>
`;

exports[`<IntegrationDetail /> should render the preferences tab of a specific integrations for facebook 1`] = `
<div>
  FacebookIntegrationPreferences
</div>
`;

exports[`<IntegrationDetail /> should render the preferences tab of a specific integrations for phone 1`] = `
<div>
  VoiceIntegration
</div>
`;

exports[`<IntegrationDetail /> should render the preferences tab of a specific integrations for sms 1`] = `
<div>
  SmsIntegration
</div>
`;

exports[`<IntegrationDetail /> should render the setup page for email 1`] = `
<div>
  EmailIntegrationCreate
</div>
`;

exports[`<IntegrationDetail /> should render the setup page for facebook 1`] = `
<div>
  FacebookIntegrationSetup
</div>
`;
